test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/bad_arg_type.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[1]: 
          TIdentifier: x
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CSubscript: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: x
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Pointer: 
                Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 10
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 1
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: foo
                  List[1]: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: arr
                        None: 
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
